--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "babel src -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yknl/instascrape"
+  },
   "keywords": [
     "instagram",
     "scrape",
